--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "glitch-hello-node",
   "version": "0.1.0",
   "description": "A simple Node app built on fastify, instantly up and running. Built to be remixed on Glitch.com.",
-  "main": "server.js",
+  "main": "Server.js",
   "scripts": {
-    "start": "node Server.js",
+    "start": "node Server.js"
   },
   "dependencies": {
     "@fastify/formbody": "^7.4.0",
