--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "glitch-hello-node",
+  "name": "A Modded Scenexe2 Server",
   "version": "0.1.0",
   "description": "A simple Node app built on fastify, instantly up and running. Built to be remixed on Glitch.com.",
   "main": "Server.js",
   "scripts": {
-    "start": "node Server.js"
+    "start": "node ServerFiles//GlitchServer.js"
   },
   "dependencies": {
     "@fastify/formbody": "^7.4.0",
