Server File Update, Setup File Redone

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "A Modded Scenexe2 Server",
+  "name": "a_modded_scenexe2_server",
   "version": "0.1.0",
   "description": "A simple Node app built on fastify, instantly up and running. Built to be remixed on Glitch.com.",
   "main": "Server.js",
   "scripts": {
-    "start": "node ServerFiles//GlitchServer.js"
+    "start": "node Server.js",
+    "Testing": "node ServerFiles//TestServer.js"
   },
   "dependencies": {
     "@fastify/formbody": "^7.4.0",
