--- a/package.json
+++ b/package.json
@@ -1,17 +1,12 @@
 {
-  "name": "a_modded_scenexe2_server",
+  "name": "scenexe2-private-server-plus",
   "version": "0.1.0",
-  "description": "A simple Node app built on fastify, instantly up and running. Built to be remixed on Glitch.com.",
-  "main": "Server.js",
+  "description": "scenexe2-private-server-plus is a fork of Absentpopcorn33's modded scenexe2 private server.",
+  "main": "server.js",
   "scripts": {
-    "start": "node Server.js",
-    "Testing": "node ServerFiles//TestServer.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "@fastify/formbody": "^7.4.0",
-    "@fastify/static": "^6.12.0",
-    "@fastify/view": "^8.2.0",
-    "fastify": "^4.27.0",
     "fetch": "^1.1.0",
     "got": "^14.3.0",
     "handlebars": "^4.7.8",
