--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "node": "14.x"
   },
   "repository": {
-    "url": "https://glitch.com/edit/#!/glitch-hello-node"
+    "url": "https://github.com/phosphorus9273/scenexe2-private-server-plus"
   },
   "license": "MIT",
   "keywords": [
